Thu May 18 02:51:44 1995  Matti Aarnio  <mea@nic.funet.fi>

	* sendfile.c:
	    Revised target-address processing..

	* nmr.c, send.c:
	    Consider only codes below ASCII ' ' (SPACE) to be bad on message
	    transmission. -- Lets 8-bit ISO-Latin chars go thru as is...

	* ebcdic.h, ebcdicinv.c:
	    Made a 1:1 mapping in between ASCII and EBCDIC in true
	    JNET fashion (likely exactly same table as they have..)

Mon Apr 24 08:48:51 1995  Matti Aarnio  <mea@nic.funet.fi>

	* sendfile.c:
	    A bit stricter processing of target address - to ensure that
	    it follows the 8+8 limits of NJE..

	* transfer.c:
	    Check that the file-path given to us is absolute -- that is,
	    it starts with "/".

	* consts.h, io.c vmnet_monitor():
	    "VMNET MONITOR" probe interval changed to 60 seconds,
	    and full timeout to 4*60 seconds.
	    Now ONE slow-responding case (like temporary connectivity
	    breakdown) won't break the link.

Fri Apr 21 11:23:23 1995  Matti Aarnio  <mea@nic.funet.fi>

	* unix.c, util.c:
	    A bit more processing when the emulator gets SIGHUP:
		- close (and open) route table
		- close (and open) RSCS accounting file
		- close (open is implicitic) Spoolid cache
		- re-read File-Exits
		- re-read Msg-Exits
		- close (and open) logfile.

	* consts.h, unix_tcp.c, unix.c:
	    Under some unclear conditions the InBuffer and/or XmitBuffer
	    appeared to be overfull -> data following it becomes over-
	    written causing all kinds of havock...  Re-arranged buffers
	    so that such overwrite corrupts (at first) dataset-headers,
	    and only then goes out to next buffer in chain..
	    There used to be important length counters following
	    those buffers...

	* unix_tcp.c, io.c, unix.c:
	    Still more fixes to NBSTREAM -- under some conditions
	    the  WritePending  was left set, and clearing it
	    at link activation was not taken care off..
	    ( NBSTREAM implies (fully) NBCONNECT, on one case the