@@ -1,2 +1,2 @@
 /* versio.c -- autogenerated by version.sh at distribution creation */
-char *version_time = "9505180324";
+char *version_time = "9505241344";
